--- a/Proyecto/Formularios/ProyectoMaster.Master
+++ b/Proyecto/Formularios/ProyectoMaster.Master
@@ -61,6 +61,13 @@
       <div>
         <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
         <%-- Acá se incluye el contenido de la página de Login --%>
+
+            <div style="text-align: right;" class="col-sm-4">
+                <p>
+                <asp:HyperLink ID="hpfSalir" runat="server" NavigateUrl="~/Formularios/frmSalir.aspx">Cerrar Sesíon</asp:HyperLink>
+                </p>
+            </div>
+
         </asp:ContentPlaceHolder>
       </div>
     </div>
