--- a/Proyecto/Content/Site.css
+++ b/Proyecto/Content/Site.css
@@ -5,14 +5,42 @@
     color: #fff;
     background-color: #366cc2;
     border-radius: 50px;
-    padding: 20px;
     box-shadow: 2px 6px 6px rgba(0, 0, 0, 0.3);
     transition: all 0.25s linear;
     margin: 15px;
 }
 
+    .btn-main:hover {
+        background-color: #852ed9;
+        color: #fff;
+        box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.35);
+    }
+
+.btn-alter {
+    color: #fff;
+    background-color: #2bb580;
+    border-radius: 50px;
+    box-shadow: 2px 6px 6px rgba(0, 0, 0, 0.3);
+    transition: all 0.25s linear;
+    margin: 15px;
+}
+    .btn-alter:hover {
+        background-color: #54ccc4;
+        color: #fff;
+        box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.35);
+    }
 .btn-xl {
     min-width: 200px;
+    padding: 20px;
+}
+.btn-m {
+    min-width: 150px;
+    padding: 10px;
+}
+
+.btn-s {
+    min-width: 100px;
+    padding: 5px;
 }
 
 .md-textbox {
@@ -23,12 +51,6 @@
     box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.3);
     border-radius: 25px;
     margin: 15px;
-}
-
-.btn-main:hover {
-    background-color: #852ed9;
-    color: #fff;
-    box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.35);
 }
 
 .login-container {
