--- a/Proyecto/Content/Site.css
+++ b/Proyecto/Content/Site.css
@@ -47,7 +47,7 @@
     width: 250px;
     text-align: center;
     border: 0;
-    background-color: #fff;
+    background-color: #f5f5f5;
     box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.3);
     border-radius: 25px;
     margin: 15px;
@@ -61,6 +61,12 @@
     text-align: center;
     padding-top: 20px;
     padding-bottom: 25px;
+}
+
+label {
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-top: 15px;
 }
 
 .login {
