--- a/Proyecto/Content/Site.css
+++ b/Proyecto/Content/Site.css
@@ -99,3 +99,8 @@ label {
     display: block;
     text-align: center;
 }
+
+.centered-element {
+    margin-left: auto;
+    margin-right: auto;
+}
