--- a/Proyecto/Formularios/ProyectoMaster.Master
+++ b/Proyecto/Formularios/ProyectoMaster.Master
@@ -80,7 +80,7 @@
                         <div class="dropdown-menu" style="background-color: #1D809F;">
                             <a class="dropdown-item" href="/Formularios/frmIngresarPersona">Ingresar Personas</a>
                             <a class="dropdown-item" href="#EliminarJugadores">Ingresar Usuarios</a>
-                            <a class="dropdown-item" href="#ModificarJugadores">Lista de Personas</a>
+                            <a class="dropdown-item" href="/Formularios/frmListaPersonas">Lista de Personas</a>
                         </div>
                     </div>
                 </li>
