--- a/Proyecto/Content/Site.css
+++ b/Proyecto/Content/Site.css
@@ -29,6 +29,21 @@
         color: #fff;
         box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.35);
     }
+.btn-cancel {
+    color: #fff;
+    background-color: #cc2b4e;
+    border-radius: 50px;
+    box-shadow: 2px 6px 6px rgba(0, 0, 0, 0.3);
+    transition: all 0.25s linear;
+    margin: 15px;
+}
+
+    .btn-cancel:hover {
+        background-color: #d44e6b;
+        color: #fff;
+        box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.35);
+    }
+
 .btn-xl {
     min-width: 200px;
     padding: 20px;
@@ -48,12 +63,13 @@
     text-align: center;
     border: 0;
     background-color: #f5f5f5;
-    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
     border-radius: 25px;
     margin: 15px;
 }
 
 .login-container {
+    background-color: #fff;
     background-color: rgba(255,255,255,0.8);
     border-radius: 25px;
     color: #000;
