--- a/Proyecto/Formularios/ProyectoMaster.Master
+++ b/Proyecto/Formularios/ProyectoMaster.Master
@@ -83,7 +83,9 @@
                         </div>
                     </div>
                 </li>
-
+                 <li class="nav-item">
+                     <a class="btn btn-primary" href="/Formularios/frmSalir">Cerrar Sesión</a>
+                </li>
             </ul>
         </div>
     </nav>
