--- a/Proyecto/Reportes/ReporteTablaPosiciones.rdlc
+++ b/Proyecto/Reportes/ReporteTablaPosiciones.rdlc
@@ -464,9 +464,9 @@
           </Paragraphs>
           <rd:DefaultName>UserID</rd:DefaultName>
           <Top>0.30556in</Top>
-          <Left>0.95833in</Left>
+          <Left>0.97222in</Left>
           <Height>0.25in</Height>
-          <Width>1in</Width>
+          <Width>1.825in</Width>
           <ZIndex>3</ZIndex>
           <Style>
             <Border>
@@ -495,7 +495,7 @@
           <rd:DefaultName>Textbox15</rd:DefaultName>
           <Top>0.55556in</Top>
           <Height>0.25in</Height>
-          <Width>1.25in</Width>
+          <Width>1.49167in</Width>
           <ZIndex>4</ZIndex>
           <Style>
             <Border>
@@ -523,9 +523,9 @@
           </Paragraphs>
           <rd:DefaultName>PageNumber</rd:DefaultName>
           <Top>0.55556in</Top>
-          <Left>1.25in</Left>
+          <Left>1.49167in</Left>
           <Height>0.25in</Height>
-          <Width>1in</Width>
+          <Width>0.35in</Width>
           <ZIndex>5</ZIndex>
           <Style>
             <Border>
@@ -537,7 +537,7 @@
             <PaddingBottom>2pt</PaddingBottom>
           </Style>
         </Textbox>
-        <Textbox Name="TotalPages">
+        <Textbox Name="TotalPages2">
           <CanGrow>true</CanGrow>
           <KeepTogether>true</KeepTogether>
           <Paragraphs>
@@ -553,9 +553,9 @@
           </Paragraphs>
           <rd:DefaultName>TotalPages</rd:DefaultName>
           <Top>0.55556in</Top>
-          <Left>2.56667in</Left>
+          <Left>2.17223in</Left>
           <Height>0.25in</Height>
-          <Width>1in</Width>
+          <Width>0.35in</Width>
           <ZIndex>6</ZIndex>
           <Style>
             <Border>
@@ -583,7 +583,7 @@
           </Paragraphs>
           <rd:DefaultName>Textbox7</rd:DefaultName>
           <Top>0.55556in</Top>
-          <Left>2.25in</Left>
+          <Left>1.84167in</Left>
           <Height>0.25in</Height>
           <Width>0.31667in</Width>
           <ZIndex>7</ZIndex>
