--- a/Proyecto/Formularios/ProyectoMaster.Master
+++ b/Proyecto/Formularios/ProyectoMaster.Master
@@ -37,7 +37,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <div class="dropdown">
-                        <a class="js-scroll-trigger btn btn-primary dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">Campeonatos</a>
+                        <a class="js-scroll-trigger btn btn-primary dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">Torneos</a>
                         <div class="dropdown-menu" style="background-color: #1D809F;">
                             <a class="dropdown-item" href="/Formularios/frmCrearTorneo">Crear Torneo</a>
                             <a class="dropdown-item" href="/Formularios/frmListaTorneos">Lista de Torneos</a>
